# applied-linear-algebra

./: .gitignore  README.md
.github/workflows/: backend.yml
api/: Dockerfile  fly.toml  pyproject.toml
api/deploy/: fly.toml
api/src/api/: __init__.py  main.py  schemas.py
api/src/applied_linear_algebra/: __init__.py  autoregressive.py  clustering.py  fourier.py  hill_cipher.py  lotka_volterra.py  random_walk.py
api/tests/: test_api.py  test_autoregressive.py  test_clustering.py  test_fourier.py  test_hill_cipher.py  test_lotka_volterra.py  test_random_walk.py
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/autoregressive/: page.tsx
web/app/clustering/: page.tsx
web/app/fourier/: page.tsx
web/app/hill-cipher/: page.tsx
web/app/lotka-volterra/: page.tsx
web/app/random-walk/: page.tsx
web/components/: AlgoCard.tsx  AlgoLayout.tsx  Plot.tsx
web/lib/: api.ts  types.ts
web/types/: plotly-dist-min.d.ts
