[project]
name = "applied-linear-algebra"
version = "0.1.0"
description = "Six applied linear-algebra algorithms (k-means, Fourier fit, Hill cipher, AR forecast, Lotka-Volterra, random walk) exposed via FastAPI."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Shawn Werber" }]
dependencies = [
  "numpy>=1.26,<3.0",
  "scikit-learn>=1.4,<2.0",
  "fastapi>=0.115",
  "pydantic>=2.7",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "hypothesis>=6.100",
  "ruff>=0.6",
  "mypy>=1.10",
  "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RET"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
ignore_missing_imports = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
